--- a/links/index.html
+++ b/links/index.html
@@ -17,7 +17,7 @@
   <meta http-equiv="window-target" content="_top" />
   
   
-  <title>友情链接 | title</title>
+  <title>友情链接 | Feng.Huang</title>
   <meta property="og:type" content="website">
 <meta property="og:title" content="友情链接">
 <meta property="og:url" content="http://dangkei.github.io/links/index.html">
