--- a/repository/index.html
+++ b/repository/index.html
@@ -17,7 +17,7 @@
   <meta http-equiv="window-target" content="_top" />
   
   
-  <title>项目库 | title</title>
+  <title>项目库 | Feng.Huang</title>
   <meta property="og:type" content="website">
 <meta property="og:title" content="项目库">
 <meta property="og:url" content="http://dangkei.github.io/repository/index.html">
