--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
   <meta http-equiv="window-target" content="_top" />
   
   
-  <title>404 Not Found：该页无法显示 | title</title>
+  <title>404 Not Found：该页无法显示 | Feng.Huang</title>
   <meta property="og:type" content="website">
 <meta property="og:title" content="404 Not Found：该页无法显示">
 <meta property="og:url" content="http://dangkei.github.io/404.html">
