--- a/about/index.html
+++ b/about/index.html
@@ -449,7 +449,48 @@
     <blockquote>
 <p>2021-07-01 建党100周年纪念日<br>看到一个好的主题<code>pure</code>，感觉非常不错就换了，非常感谢这个主题的作者，虽然更新后很多内容都没有了，<br>不过还好有备份。 有时间慢慢恢复吧。自己已经是一个大龄程序员了， 走过很长一段人生路， 对生命，生活，<br>亲情，爱情，家庭都有了一些新的认知。 希望今后的道路上让编程重新成为自己的爱好而不止是谋生的手段，<br>重拾自己对技术的兴趣。 也希望自己身边的人都健康，快乐。</p>
 </blockquote>
-
+<ul class="layui-timeline">
+  <li class="layui-timeline-item">
+    <i class="layui-icon layui-timeline-axis"></i>
+    <div class="layui-timeline-content layui-text">
+      <h3 class="layui-timeline-title">8月18日</h3>
+      <p>
+        layui 2.0 的一切准备工作似乎都已到位。发布之弦，一触即发。
+        <br>不枉近百个日日夜夜与之为伴。因小而大，因弱而强。
+        <br>无论它能走多远，抑或如何支撑？至少我曾倾注全心，无怨无悔 <i class="layui-icon"></i>
+      </p>
+    </div>
+  </li>
+  <li class="layui-timeline-item">
+    <i class="layui-icon layui-timeline-axis"></i>
+    <div class="layui-timeline-content layui-text">
+      <h3 class="layui-timeline-title">8月16日</h3>
+      <p>杜甫的思想核心是儒家的仁政思想，他有<em>“致君尧舜上，再使风俗淳”</em>的宏伟抱负。个人最爱的名篇有：</p>
+      <ul>
+        <li>《登高》</li>
+        <li>《茅屋为秋风所破歌》</li>
+      </ul>
+    </div>
+  </li>
+  <li class="layui-timeline-item">
+    <i class="layui-icon layui-timeline-axis"></i>
+    <div class="layui-timeline-content layui-text">
+      <h3 class="layui-timeline-title">8月15日</h3>
+      <p>
+        中国人民抗日战争胜利日
+        <br>铭记、感恩
+        <br>所有为中华民族浴血奋战的英雄将士
+        <br>永垂不朽
+      </p>
+    </div>
+  </li>
+  <li class="layui-timeline-item">
+    <i class="layui-icon layui-timeline-axis"></i>
+    <div class="layui-timeline-content layui-text">
+      <div class="layui-timeline-title">过去</div>
+    </div>
+  </li>
+</ul> 
   </div>
 </article>
 
