--- a/about/index.html
+++ b/about/index.html
@@ -462,36 +462,47 @@
   <li class="layui-timeline-item">
     <i class="layui-icon layui-timeline-axis"></i>
     <div class="layui-timeline-content layui-text">
-      <h3 class="layui-timeline-title">2019年3月——至今</h3>
+      <h3 class="layui-timeline-title">2019.4月——至今</h3>
       <p>
         航天四创科技有限责任公司
       </p>
       <ul>
-        <li>高级软件开发工程师</li>
+        <li>智慧政务事业部</li>
       </ul>
     </div>
   </li>
   <li class="layui-timeline-item">
     <i class="layui-icon layui-timeline-axis"></i>
     <div class="layui-timeline-content layui-text">
-      <h3 class="layui-timeline-title">8月16日</h3>
-      <p>杜甫的思想核心是儒家的仁政思想，他有<em>“致君尧舜上，再使风俗淳”</em>的宏伟抱负。个人最爱的名篇有：</p>
+      <h3 class="layui-timeline-title">2017.12——2019.3</h3>
+      <p>南北恒大科技有限公司</p>
       <ul>
-        <li>《登高》</li>
-        <li>《茅屋为秋风所破歌》</li>
+        <li>项目开发部</li>
       </ul>
     </div>
   </li>
   <li class="layui-timeline-item">
     <i class="layui-icon layui-timeline-axis"></i>
     <div class="layui-timeline-content layui-text">
-      <h3 class="layui-timeline-title">8月15日</h3>
+      <h3 class="layui-timeline-title">2016.4——2017.11</h3>
       <p>
-        中国人民抗日战争胜利日
-        <br>铭记、感恩
-        <br>所有为中华民族浴血奋战的英雄将士
-        <br>永垂不朽
+        Smartdot
       </p>
+	  <ul>
+	    <li>SEU</li>
+	  </ul>
+    </div>
+  </li>
+  <li class="layui-timeline-item">
+    <i class="layui-icon layui-timeline-axis"></i>
+    <div class="layui-timeline-content layui-text">
+      <h3 class="layui-timeline-title">2008.3——2016.03</h3>
+      <p>
+        PwC
+      </p>
+  	  <ul>
+  	    <li>GTS</li>
+  	  </ul>
     </div>
   </li>
   <li class="layui-timeline-item">
